# any2agent

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE-EXCEPTION.txt  NOTICE  README.md  demo.tape  pyproject.toml
.ci-pending/: ci.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
any2agent/: __init__.py  cli.py  compose.py  config.py  connect.py  llm_repair.py  migrate.py  respond.py  shape.py  spec.py  verifier.py
any2agent/adapters/: base.py  rest.py
any2agent/core/: agent.py  composite.py  dispatch.py  memory.py  registry.py  toolrag.py
any2agent/evals/: __init__.py  budget.py  grader.py  history.py  lessons.py  model.py  runner.py  stats.py  tasks.py  telemetry.py
any2agent/scan/: auth.py  code.py  openapi.py
any2agent/server/: app.py  mcp_server.py
any2agent/server/web/: chat.html  evals.html
docs/: HOW-EVAL-WORKS.md  HOW-TOOLS-ARE-MADE.md  USAGE.md
docs/03-analysis/: eval-console.analysis.md  eval-feedback.analysis.md  eval-stats.analysis.md  response-shaping.analysis.md  runtime-telemetry.analysis.md  self-verification.analysis.md  tool-composition.analysis.md  tool-consolidation.analysis.md
docs/04-report/: README.md  eval-console.report.md  eval-feedback.report.md  response-shaping.report.md  runtime-telemetry.report.md  self-verification.report.md  tool-composition.report.md  tool-consolidation.report.md
examples/notes-api/: README.md  main.py
examples/petstore/: README.md  openapi-min.json
tests/: conftest.py  test_compare.py  test_composite.py  test_evals_endpoint.py  test_grader.py  test_integration_notes_api.py  test_lessons_history.py  test_migrate.py  test_respond.py  test_rest_security.py  test_runner.py  test_security_hardening.py  test_shape.py  test_stats.py  test_tasks.py  test_telemetry.py  test_toolrag.py  test_verifier_task_eval.py
(+41 files in other folders)
