[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "any2agent"
version = "0.1.0"
description = "Turn ANY API-backed system into a conversational agent: point it at the system's API contract, run a script, get a working agent."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
authors = [{ name = "any2agent contributors" }]
keywords = ["llm", "agent", "openapi", "swagger", "tool-calling", "litellm", "fastapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "litellm",
    "tomli; python_version < '3.11'",
]

[project.optional-dependencies]
# Semantic tool discovery (embeddings) is optional; without it, keyword search is used.
embeddings = ["openai"]
# Load keys from a local .env (optional; shell env works without it).
dotenv = ["python-dotenv"]
# YAML OpenAPI/Swagger contracts (JSON contracts need nothing).
yaml = ["pyyaml"]
dev = ["pytest", "httpx"]  # httpx: fastapi TestClient only — runtime uses stdlib urllib

[project.scripts]
any2agent = "any2agent.cli:main"

[project.urls]
Homepage = "https://github.com/vibeuniv/any2agent"
Repository = "https://github.com/vibeuniv/any2agent"
Issues = "https://github.com/vibeuniv/any2agent/issues"

[tool.setuptools.packages.find]
include = ["any2agent*"]

[tool.setuptools.package-data]
"any2agent.server" = ["web/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
